# Taxi-Trip-Prediction

./: README.md
taxi-trip-duration-prediction/Taxi-Trip-Duration-Prediction-App/: pyproject.toml
taxi-trip-duration-prediction/Taxi-Trip-Duration-Prediction-App/notebooks/: model-prototype.ipynb
taxi-trip-duration-prediction/Taxi-Trip-Duration-Prediction-App/taxi_trip_duration_prediction_app/: data_processing.py  predict.py  train.py
taxi-trip-duration-prediction/Taxi-Trip-Duration-Prediction-App/taxi_trip_duration_prediction_app/inference_store/: user_input.json
taxi-trip-duration-prediction/Taxi-Trip-Duration-Prediction-App/taxi_trip_duration_prediction_app/model_store/: final_model.pkl  transformation_obj.pkl
