[tool.poetry]
name = "taxi-trip-duration-prediction-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
missingno = "^0.5.2"
matplotlib = "^3.9.2"
pyarrow = "^18.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
